# EasyBackup

./: .gitignore  CMakeLists.txt  README.md  easy-backup.desktop  translation.xml
src/: CMakeLists.txt  backup.cxx  backup.hh  backup_page.cxx  backup_page.hh  configure_page.cxx  configure_page.hh  icons.qrc  lang.cxx  lang.hh  main.cxx  settings.cxx  settings.hh  tabwidget.cxx  tabwidget.hh  window.cxx  window.hh
